--- a/th/conf/log4j.properties
+++ b/th/conf/log4j.properties
@@ -12,6 +12,6 @@ log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.Append=false
 log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=100
-log4j.appender.LOGFILE.File=logs/th/adara-qa-trace.log
+log4j.appender.LOGFILE.File=/qa/logs/th/th.log
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p %C.%M:%L - %m%n
