add init comm web browser via selenium rc

--- a/th/conf/build_info.properties
+++ b/th/conf/build_info.properties
@@ -1,5 +1,11 @@
+#Wed, 03 Dec 2014 16:04:06 -0800
+<<<<<<<=Updated upstream
 #Tue, 02 Dec 2014 09:56:19 -0800
+
+=\=\=\=\=\=\=
+#Wed, 03 Dec 2014 15:44:54 -0800
 build.major.number=0
 build.minor.number=1
 
-build.revision.number=00019
+build.revision.number=00022
+>>>>>>>=Stashed changes
