--- a/th/conf/log4j.properties
+++ b/th/conf/log4j.properties
@@ -1,5 +1,11 @@
 log4j.rootCategory=TRACE, CONSOLE, LOGFILE
 
+
+log4j.logger.org.apache.http=ERROR
+log4j.logger.org.apache.http.impl.conn=ERROR
+log4j.logger.org.apache.http.wire=ERROR
+log4j.logger.org.openqa.jetty=ERROR
+
  
 log4j.appender.CONSOLE.Threshold=TRACE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
