--- a/th/conf/th.properties
+++ b/th/conf/th.properties
@@ -1,6 +1,6 @@
 # uncommnet the following to use your test machine name, maybe it is your laptop
 # default is queried using command `hostname`
-#qa.th.test.station=test_station_1
+#qa.th.test.station=hostname
 
 
 # if you don't want to save test result into database, please uncomment the following line
@@ -15,7 +15,7 @@ qa.th.db.user=th
 qa.th.db.pass=p@ssword
 
 
-# at least one test suite full class name needed
+# test suite full class name
 qa.th.test.suite=qa.suite.sample.SampleSuite
 
 # setup this to DEBUG specific test cases
@@ -24,7 +24,7 @@ qa.th.debug.method.regex=.+
 
 
 # these are some test suite environment specific setups, if not setup, default values will be used
-# please check test source code for options and default values
+# please check test source code or document for options and default values
 
 qa.driver.sample.SampleDb.HOST=127.0.0.1:13306
 qa.driver.sample.SampleDb.SCHEMA=sample
@@ -33,4 +33,4 @@ qa.driver.sample.SampleDb.PASS=password
 
 
 #qa.comm.WebBrowser.TYPE=Chrome
-#webdriver.chrome.driver=/qa/tools/web_browser/chromedriver
+webdriver.chrome.driver=/qa/tools/web_browser/chromedriver
