--- a/thr/src/java/log4j.properties
+++ b/thr/src/java/log4j.properties
@@ -9,6 +9,7 @@ log4j.logger.httpclient.wire.header=WARN, CONSOLE
 log4j.logger.httpclient.wire.content=WARN, CONSOLE
 
 
+log4j.appender.CONSOLE.Threshold=TRACE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p %C.%M:%L - %m%n
