--- a/thr/web/WEB-INF/web.xml
+++ b/thr/web/WEB-INF/web.xml
@@ -32,10 +32,10 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <session-config>
-        <session-timeout>30</session-timeout>
+        <session-timeout>300</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>suites.xhtml</welcome-file>
+        <welcome-file>suites_result.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
