--- a/th/conf/th.properties
+++ b/th/conf/th.properties
@@ -3,11 +3,9 @@
 #qa.th.test.station=hostname
 
 
-# if you don't want to save test result into database, please uncomment the following line
-# qa.th.db.type=none
-
-
-# this is test result mysql database
+# this is test result database
+#qa.th.db.type=h2
+#qa.th.db.type=postgresql
 qa.th.db.type=mysql
 qa.th.db.host=127.0.0.1:3306
 qa.th.db.schema=testharness
@@ -18,19 +16,23 @@ qa.th.db.pass=p@ssword
 # test suite full class name
 qa.th.test.suite=qa.suite.sample.SampleSuite
 
+
 # setup this to DEBUG specific test cases
 qa.th.debug.class.regex=.+
 qa.th.debug.method.regex=.+
 
 
+qa.th.log.path=/qa/logs
+
+
 # these are some test suite environment specific setups, if not setup, default values will be used
 # please check test source code or document for options and default values
 
-qa.driver.sample.SampleDb.HOST=127.0.0.1:13306
-qa.driver.sample.SampleDb.SCHEMA=sample
-qa.driver.sample.SampleDb.USER=user
-qa.driver.sample.SampleDb.PASS=password
+qa.th.driver.sample.SampleDb.HOST=127.0.0.1:13306
+qa.th.driver.sample.SampleDb.SCHEMA=sample
+qa.th.driver.sample.SampleDb.USER=user
+qa.th.driver.sample.SampleDb.PASS=password
 
 
-#qa.comm.WebBrowser.TYPE=Chrome
+#qa.th.comm.WebBrowser.TYPE=Chrome
 webdriver.chrome.driver=/qa/tools/web_browser/chromedriver
