--- a/th/conf/th.properties
+++ b/th/conf/th.properties
@@ -3,6 +3,10 @@
 #qa.th.test.station=hostname
 
 
+# the number of current test execution threads, default is 1 (all tests executed sequentially)
+qa.th.exec.thread.count=1
+
+
 # this is test result database
 #qa.th.db.type=h2
 #qa.th.db.type=postgresql
