--- a/th/pom.xml
+++ b/th/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0.0</version>  
     <packaging>jar</packaging>
 
-    <name>Testharness Test Automation Framework</name>
-    <description>Testharness Test Automation Framework</description>
+    <name>testharness</name>
+    <description>Testharness - Test Automation Framework</description>
     <url>https://github.com/tascape/testharness</url>
     <licenses>
         <license>
@@ -47,6 +47,7 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -74,7 +75,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -95,20 +96,15 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.10</version>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
