--- a/th/src/main/resources/log4j.properties
+++ b/th/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.logger.org.apache.http.wire=ERROR
 log4j.logger.org.openqa.jetty=ERROR
 
  
-log4j.appender.CONSOLE.Threshold=DEBUG
+log4j.appender.CONSOLE.Threshold=TRACE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p %C.%M:%L - %m%n
