--- a/thr/pom.xml
+++ b/thr/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.0</version>
     <packaging>war</packaging>
 
-    <name>thrd</name>
+    <name>thr</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
