--- a/thr/src/main/webapp/WEB-INF/web.xml
+++ b/thr/src/main/webapp/WEB-INF/web.xml
@@ -28,10 +28,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <session-config>
@@ -44,6 +40,6 @@
     </welcome-file-list>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/error.xhtml</location>
+        <location>/error.html</location>
     </error-page>
 </web-app>
