--- a/th/pom.xml
+++ b/th/pom.xml
@@ -157,5 +157,10 @@
             <version>5.1.34</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.2</version>
+        </dependency>
     </dependencies>
 </project>
