fix h2 dbh issue

--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -8,9 +8,9 @@ qa.th.exec.thread.count=1
 
 
 # this is test result database
-#qa.th.db.type=h2
+qa.th.db.type=h2
+#qa.th.db.type=mysql
 #qa.th.db.type=postgresql
-qa.th.db.type=mysql
 qa.th.db.host=127.0.0.1:3306
 qa.th.db.schema=testharness
 qa.th.db.user=th
@@ -36,7 +36,3 @@ qa.th.driver.sample.SampleDb.HOST=127.0.0.1:13306
 qa.th.driver.sample.SampleDb.SCHEMA=sample
 qa.th.driver.sample.SampleDb.USER=user
 qa.th.driver.sample.SampleDb.PASS=password
-
-
-#qa.th.comm.WebBrowser.TYPE=Chrome
-webdriver.chrome.driver=/qa/tools/web_browser/chromedriver
