update config file

--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -18,7 +18,7 @@ qa.th.db.pass=p@ssword
 
 
 # test suite full class name
-qa.th.test.suite=qa.suite.sample.SampleSuite
+qa.th.test.suite=com.tascape.qa.th.suite.JUnit4Suite 
 
 
 # setup this to DEBUG specific test cases
