--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@ log4j.logger.org.openqa.jetty=ERROR
 log4j.appender.CONSOLE.Threshold=TRACE
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p %C.%M:%L - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-4t %-5p %C{1}.%M:%L - %m%n
 
 
 log4j.appender.LOGFILE.Threshold=TRACE
@@ -20,4 +20,4 @@ log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=100
 log4j.appender.LOGFILE.File=/qa/logs/th/th.log
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5p %C.%M:%L - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-4t %-5p %C.%M:%L - %m%n
