--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,6 +18,6 @@ log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.Append=false
 log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=100
-log4j.appender.LOGFILE.File=/qa/logs/th/th.log
+log4j.appender.LOGFILE.File=th.log
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-4t %-5p %C.%M:%L - %m%n
