export suite result into json

--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -5,7 +5,7 @@
 
 # the number of current test execution threads, default is 1 (all tests executed sequentially)
 qa.th.exec.thread.count=1
-qa.th.log.path=/qa/logs
+qa.th.log.path=./logs/
 
 
 # this is test result database
@@ -19,7 +19,7 @@ qa.th.db.pass=p@ssword
 
 
 # test suite full class name
-qa.th.test.suite=com.tascape.qa.th.suite.JUnit4Suite 
+qa.th.test.suite=com.tascape.qa.th.suite.JUnit4Suite
 
 # setup this to DEBUG specific test cases
 qa.th.debug.class.regex=.+
