--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -5,7 +5,7 @@
 
 # the number of current test execution threads, default is 1 (all tests executed sequentially)
 qa.th.exec.thread.count=1
-qa.th.log.path=./logs/
+qa.th.log.path=./
 
 
 # this is test result database
