--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,8 +6,8 @@ log4j.logger.org.apache.http.impl.conn=ERROR
 log4j.logger.org.apache.http.wire=ERROR
 log4j.logger.org.openqa.jetty=ERROR
 
- 
-log4j.appender.CONSOLE.Threshold=TRACE
+
+log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-4t %-5p %C{1}.%M:%L - %m%n
