--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -53,14 +53,15 @@ Vagrant.configure(2) do |config|
     sudo service mysql restart
 
 
-    echo "tomee +"
+    echo "install tomee +"
     wget "https://repository.apache.org/service/local/artifact/maven/redirect?r=snapshots&g=org.apache.openejb&a=apache-tomee&v=7.0.0-SNAPSHOT&c=plus&p=tar.gz" -O /home/vagrant/tomee.tar.gz
     tar zxvf /home/vagrant/tomee.tar.gz -C /home/vagrant/
     pushd /home/vagrant/apache-tomee-plus-7.0.0-SNAPSHOT/conf
         sed '/tomcat-users>/d' tomcat-users.xml > aa.txt
         echo '  <role rolename="tomee-admin" />' >> aa.txt
         echo '  <user username="tomee" password="tomee" roles="tomee-admin,manager-gui" />' >> aa.txt
-        rm tomcat-users.xml
+        echo '</tomcat-users>' >> aa.txt
+        mv tomcat-users.xml tomcat-users.xml.bk
         mv aa.txt tomcat-users.xml
         wget "https://oss.sonatype.org/content/repositories/releases/com/tascape/qa/thr/1.0.16/thr-1.0.16.war" -O ../webapps/thr.war
         ../bin/startup.sh
