--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -56,7 +56,8 @@ Vagrant.configure(2) do |config|
     echo "install tomee +"
     wget "https://repository.apache.org/service/local/artifact/maven/redirect?r=snapshots&g=org.apache.openejb&a=apache-tomee&v=7.0.0-SNAPSHOT&c=plus&p=tar.gz" -O /home/vagrant/tomee.tar.gz
     tar zxvf /home/vagrant/tomee.tar.gz -C /home/vagrant/
-    pushd /home/vagrant/apache-tomee-plus-7.0.0-SNAPSHOT/conf
+    ln -s /home/vagrant/apache-tomee-plus-7.0.0-SNAPSHOT /usr/share/tomee7
+    pushd /usr/share/tomee7/conf
         sed '/tomcat-users>/d' tomcat-users.xml > aa.txt
         echo '  <role rolename="tomee-admin" />' >> aa.txt
         echo '  <user username="tomee" password="tomee" roles="tomee-admin,manager-gui" />' >> aa.txt
@@ -66,6 +67,9 @@ Vagrant.configure(2) do |config|
         wget "https://oss.sonatype.org/content/repositories/releases/com/tascape/qa/thr/1.0.16/thr-1.0.16.war" -O ../webapps/thr.war
         ../bin/startup.sh
     popd
+    wget "https://raw.githubusercontent.com/tascape/testharness/master/doc/tomee7" -O /etc/init.d/tomee7
+    chmod 755 /etc/init.d/tomee7
+    update-rc.d tomee7 defaults
 
 
     echo "install nginx"
