--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -47,10 +47,14 @@ Vagrant.configure(2) do |config|
     mysql -u root < mysql-th.txt
 
     wget "https://raw.githubusercontent.com/tascape/testharness/master/src/main/resources/db/thr.sql" -O thr.sql
-    echo "USE testharness;" > thr.txt
-    cat thr.sql >> thr.txt
-    mysql -u th -pp@ssword < thr.txt
+    mysql -u th -pp@ssword testharness < thr.sql
     sudo service mysql restart
+
+    (crontab -l 2>/dev/null; echo "*/5 * * * * mysqldump -u root testharness > /home/vagrant/qa/th/th.sql") | crontab -
+    if [[ -e /home/vagrant/qa/th/th.sql ]]; then
+        echo "restore testharness db"
+        mysql -u root testharness < /home/vagrant/qa/th/th.sql || echo "error restoring tesharness db"
+    fi
 
 
     echo "install tomee +"
