--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -23,65 +23,8 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.provision "shell", inline: <<-SHELL
-    sudo apt-get update
-
-    echo "install oracle java8"
-    sudo add-apt-repository ppa:webupd8team/java
-    sudo apt-get update
-    echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
-    echo debconf shared/accepted-oracle-license-v1-1 seen true | sudo debconf-set-selections
-    sudo apt-get install -y oracle-java8-installer
-    sudo apt-get install oracle-java8-set-default
-    java -version
-
-
-    echo "install mysql"
-    sudo DEBIAN_FRONTEND=noninteractive apt-get -y --force-yes install mysql-server
-    sudo sed -i '/bind-address/d' /etc/mysql/my.cnf
-
-    echo "CREATE DATABASE testharness;" > mysql-th.txt
-    echo "CREATE USER 'th'@'localhost' IDENTIFIED BY 'p@ssword';" >> mysql-th.txt
-    echo "GRANT ALL ON testharness.* TO 'th'@'localhost';" >> mysql-th.txt
-    echo "CREATE USER 'th'@'%' IDENTIFIED BY 'p@ssword';" >> mysql-th.txt
-    echo "GRANT ALL ON testharness.* TO 'th'@'%';" >> mysql-th.txt
-    mysql -u root < mysql-th.txt
-
-    wget "https://raw.githubusercontent.com/tascape/testharness/master/src/main/resources/db/thr.sql" -O thr.sql
-    mysql -u th -pp@ssword testharness < thr.sql
-    sudo service mysql restart
-
-    (crontab -l 2>/dev/null; echo "*/5 * * * * mysqldump -u root testharness > /home/vagrant/qa/th/th.sql") | crontab -
-    if [[ -e /home/vagrant/qa/th/th.sql ]]; then
-        echo "restore testharness db"
-        mysql -u root testharness < /home/vagrant/qa/th/th.sql || echo "error restoring tesharness db"
-    fi
-
-
-    echo "install tomee +"
-    wget "https://repository.apache.org/service/local/artifact/maven/redirect?r=snapshots&g=org.apache.openejb&a=apache-tomee&v=7.0.0-SNAPSHOT&c=plus&p=tar.gz" -O /home/vagrant/tomee.tar.gz
-    tar zxvf /home/vagrant/tomee.tar.gz -C /home/vagrant/
-    ln -s /home/vagrant/apache-tomee-plus-7.0.0-SNAPSHOT /usr/share/tomee7
-    pushd /usr/share/tomee7/conf
-        sed '/tomcat-users>/d' tomcat-users.xml > aa.txt
-        echo '  <role rolename="tomee-admin" />' >> aa.txt
-        echo '  <user username="tomee" password="tomee" roles="tomee-admin,manager-gui" />' >> aa.txt
-        echo '</tomcat-users>' >> aa.txt
-        mv tomcat-users.xml tomcat-users.xml.bk
-        mv aa.txt tomcat-users.xml
-        wget "https://oss.sonatype.org/content/repositories/releases/com/tascape/qa/thr/1.0.16/thr-1.0.16.war" -O ../webapps/thr.war
-        ../bin/startup.sh
-    popd
-    wget "https://raw.githubusercontent.com/tascape/testharness/master/doc/tomee7" -O /etc/init.d/tomee7
-    chmod 755 /etc/init.d/tomee7
-    update-rc.d tomee7 defaults
-
-
-    echo "install nginx"
-    sudo apt-get install -y --force-yes nginx
-    echo "server {listen 8088;root /home/vagrant/qa/th/;index index.html index.htm;autoindex on;autoindex_localtime on; location /thr/ {proxy_pass http://127.0.0.1:8080/thr/;}}" > th-logs
-    sudo mv th-logs /etc/nginx/sites-enabled/th-logs
-    sudo service nginx restart
-
+    wget "https://raw.githubusercontent.com/tascape/testharness/master/doc/ubuntu" -O ubuntu
+    bash ubuntu
   SHELL
 
 end
