--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -15,6 +15,7 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.network "forwarded_port", guest: 3306, host: 13306
+  config.vm.network "forwarded_port", guest: 8080, host: 18080
   config.vm.network "forwarded_port", guest: 8088, host: 18088
 
 
