--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -20,7 +20,7 @@ qa.th.db.pass=p@ssword
 
 
 # test suite full class name
-qa.th.test.suite=com.tascape.qa.th.suite.JUnit4Suite
+qa.th.test.suite=com.tascape.qa.sample.JUnit4Suite
 
 # setup this to DEBUG specific test cases
 qa.th.debug.class.regex=.+
