--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -3,8 +3,8 @@
 #qa.th.test.station=hostname
 
 
-# the number of current test execution threads, default is 1 (all tests executed sequentially)
 qa.th.exec.thread.count=1
+qa.th.test.load.limit=100
 qa.th.log.path=./
 
 qa.th.result.visibility=true
