update the way to get log dir

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,6 +5,7 @@ log4j.logger.org.apache.http=ERROR
 log4j.logger.org.apache.http.impl.conn=ERROR
 log4j.logger.org.apache.http.wire=ERROR
 log4j.logger.org.openqa.jetty=ERROR
+log4j.logger.org.apache.jmeter=ERROR
 
 
 log4j.appender.CONSOLE.Threshold=DEBUG
