--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <prerequisites>
-        <maven>3.2.5</maven>
-    </prerequisites>
 
     <groupId>com.tascape.qa</groupId>
     <artifactId>testharness</artifactId>
-    <version>1.0.38</version>
+    <version>1.0.39</version>
     <packaging>jar</packaging>
+    <name>testharness</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -51,7 +57,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.187</version>
+            <version>1.4.190</version>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -66,13 +72,13 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.35</version>
+            <version>5.1.37</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
-            <version>2.6.0</version>
+            <version>2.6.1</version>
         </dependency>
         <dependency>
             <groupId>com.jcraft</groupId>
@@ -82,20 +88,10 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>3.0.4</version>
+            <version>3.1.0</version>
             <type>jar</type>
         </dependency>
     </dependencies>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-    </properties>
-
-    <name>testharness</name>
     <description>Testharness - Test Automation Framework</description>
     <url>https://github.com/tascape/testharness</url>
     <licenses>
@@ -106,8 +102,8 @@
     </licenses>
     <developers>
         <developer>
-            <name>Lindsay Wang</name>
-            <email>lindsay.wang@tascape.com</email>
+            <name>Linsong Wang</name>
+            <email>tascape@gmail.com</email>
             <organization>tascape</organization>
             <organizationUrl>http://www.tascape.com</organizationUrl>
         </developer>
