--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.logger.org.apache.jmeter=ERROR
 log4j.appender.CONSOLE.Threshold=DEBUG
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-4t %-5p %C{1}.%M:%L - %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %t %C{1}.%M:%L - %m%n
 
 
 log4j.appender.LOGFILE.Threshold=TRACE
@@ -19,6 +19,6 @@ log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.Append=false
 log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=100
-log4j.appender.LOGFILE.File=./logs/th.log
+log4j.appender.LOGFILE.File=${user.home}/qa/th/logs/th.log
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-4t %-5p %C.%M:%L - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %t %C.%M:%L - %m%n
