--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>4.12</version>
         </dependency>
         <dependency>
+            <groupId>com.tascape.qa</groupId>
+            <artifactId>th-ui</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
