update default framework property settings

--- a/src/main/resources/th.properties
+++ b/src/main/resources/th.properties
@@ -1,27 +1,83 @@
-# uncommnet the following to use your test machine name, maybe it is your laptop
+#
+# Uncommnet the following to use your test machine name, maybe it is your laptop
 # default is queried using command `hostname`
+#
 #qa.th.test.station=hostname
 
+#
+# This defines the number of test threads. The default is 0, meaning the thread number is defined by test suite.
+#
+#qa.th.exec.thread.count=0
 
-qa.th.exec.thread.count=0
-qa.th.test.load.limit=100
-qa.th.log.path=./
+#
+# This defines how many tests will be load, at once, to check QUEUED state. The default is 100.
+#
+# qa.th.test.load.limit=100
 
-qa.th.result.visibility=true
+#
+# This defines test log directory. The default is ${user.home}/qa/th/logs.
+#qa.th.log.path=
 
-# this is test result database
-qa.th.db.type=h2
-#qa.th.db.type=mysql
-#qa.th.db.type=postgresql
-qa.th.db.host=127.0.0.1:3306
-qa.th.db.schema=testharness
-qa.th.db.user=th
-qa.th.db.pass=p@ssword
+#
+# This defines log level for individual tests. The default is DEBUG.
+#
+#qa.th.test.log.level=TRACE
 
+#
+# This defines if the suite result is visible on report. The default is true.
+#
+#qa.th.result.visibility=true
 
-# test suite full class name
-qa.th.test.suite=com.tascape.qa.th.suite.JUnit4Suite
+#
+# This defines what test result database is used. The default is h2, meaning embeddeb DB. The anther option is mysql.
+#
+#qa.th.db.type=
 
-# setup this to DEBUG specific test cases
-qa.th.debug.class.regex=.+
-qa.th.debug.method.regex=.+
+#
+# This defines database host name/IP and port. The default is 127.0.0.1:3306.
+#
+#qa.th.db.host=
+
+#
+# This defines database schema used for test resuts. The default is testharness.
+#
+#qa.th.db.schema=
+
+#
+# This defines user name used to access test resuts database. The default is th.
+#
+#qa.th.db.user=
+
+#
+# This defines user password used to access test resuts database. The default is p@ssword.
+#
+#qa.th.db.pass=
+
+#
+# This defines test suite full class name. The default is com.tascape.qa.th.suite.JUnit4Suite.
+#
+#qa.th.test.suite=
+
+#
+# This defines which test classes will be included during test case search. The default is empty, which means to 
+# include all test classes of running test suite.
+#
+#qa.th.debug.class.regex=
+
+#
+# This defines which test methods will be included during test case search. The default is empty, which means to 
+# include all test methods of selected test classes.
+#
+#qa.th.debug.method.regex=
+
+#
+# This defines which test classes will be excuded during test case search. The default is empty, which means to 
+# exclude NO test classes of running test suite.
+#
+#qa.th.debug.class.exclude.regex=
+
+#
+# This defines which test methods will be excluded during test case search. The default is empty, which means to 
+# exclude NO test methods of selected test classes.
+#
+#qa.th.debug.method.exclude.regex=
