--- a/pom.xml
+++ b/pom.xml
@@ -197,4 +197,11 @@
         </profile>
     </profiles>
 
+    <repositories>
+        <repository>
+            <id>oss-sonatype</id>
+            <name>oss-sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 </project>
