--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -4,13 +4,13 @@
 # you're doing.
 Vagrant.configure(2) do |config|
 
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "ubuntu/xenial64"
 
 
   config.vm.provider "virtualbox" do |v|
     v.memory = 4096
     v.cpus = 2
-    v.gui = false
+    v.gui = true
   end
 
 
@@ -20,6 +20,8 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
+  config.vm.synced_folder "~/.m2", "/home/vagrant/.m2"
+  config.vm.synced_folder "~/.reactor", "/home/vagrant/.reactor"
   config.vm.synced_folder "~/reactor", "/home/vagrant/reactor"
 
 
