--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -20,9 +20,9 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "~/.m2", "/home/vagrant/.m2"
-  config.vm.synced_folder "~/.reactor", "/home/vagrant/.reactor"
-  config.vm.synced_folder "~/reactor", "/home/vagrant/reactor"
+  config.vm.synced_folder "~/.m2", "/home/ubuntu/.m2"
+  config.vm.synced_folder "~/.reactor", "/home/ubuntu/.reactor"
+  config.vm.synced_folder "~/reactor", "/home/ubuntu/reactor"
 
 
   config.vm.provision "shell", inline: <<-SHELL
