--- a/doc/Vagrantfile
+++ b/doc/Vagrantfile
@@ -4,7 +4,7 @@
 # you're doing.
 Vagrant.configure(2) do |config|
 
-  config.vm.box = "ubuntu/xenial64"
+  config.vm.box = "ubuntu/trusty64"
 
 
   config.vm.provider "virtualbox" do |v|
@@ -20,9 +20,9 @@ Vagrant.configure(2) do |config|
 
 
   config.vm.synced_folder ".", "/vagrant", disabled: true
-  config.vm.synced_folder "~/.m2", "/home/ubuntu/.m2"
-  config.vm.synced_folder "~/.reactor", "/home/ubuntu/.reactor"
-  config.vm.synced_folder "~/reactor", "/home/ubuntu/reactor"
+  config.vm.synced_folder "~/.m2", "/home/vagrant/.m2"
+  config.vm.synced_folder "~/.reactor", "/home/vagrant/.reactor"
+  config.vm.synced_folder "~/reactor", "/home/vagrant/reactor"
 
 
   config.vm.provision "shell", inline: <<-SHELL
