--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -19,6 +19,6 @@ log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
 log4j.appender.LOGFILE.Append=false
 log4j.appender.LOGFILE.MaxFileSize=10MB
 log4j.appender.LOGFILE.MaxBackupIndex=100
-log4j.appender.LOGFILE.File=${user.home}/reactor/logs/reactor.log
+log4j.appender.LOGFILE.File=${user.home}/.reactor/logs/reactor.log
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %t %C.%M:%L - %m%n
