--- a/src/main/resources/reactor.properties
+++ b/src/main/resources/reactor.properties
@@ -1,74 +1,91 @@
 #
-# Uncommnet the following to use your execution machine name, maybe it is your laptop
-# default is queried using command `hostname`
+# This is execution id. If not specified, a random one will be genearated.
 #
-#reactor.case.station=hostname
+reactor.exec.id=
+
+
+#
+# This defines a list of Java property files. All properties will be loaded by sequence, and later one will override
+# previous one with the same name. The properties in these files will override the properties defined in this file.
+reactor.conf.files=
+
+#
+# This shows your execution machine name, maybe it is your laptop. The default is queried using command `hostname`
+#
+reactor.case.station=
 
 #
 # This defines the number of case threads. The default is 0, meaning the thread number is defined by suite.
 #
-#reactor.exec.thread.count=0
+reactor.exec.thread.count=0
 
 #
 # This defines how many cases will be load, at once, to check QUEUED state. The default is 100.
 #
-# qa.th.case.load.limit=100
+qa.th.case.load.limit=100
 
 #
 # This defines case log directory. The default is ${user.home}/qa/th/logs.
-#reactor.log.path=
+reactor.log.path=.
+
+#
+# This is defines if to shuffle case execution sequence.
+#
+reactor.shuffle.cases=false
 
 #
 # This defines log level for individual cases. The default is DEBUG.
 #
-#reactor.case.log.level=TRACE
+reactor.case.log.level=DEBUG
 
 #
 # This defines if the suite result is visible on report. The default is true.
 #
-#reactor.result.visibility=true
+reactor.result.visibility=true
 
 #
 # This defines what case result database is used. The default is h2, meaning embeddeb DB. The anther option is mysql.
 #
-#reactor.db.type=
+#reactor.db.type=h2
 
 #
 # This defines database host name/IP and port. The default is 127.0.0.1:3306.
 #
-#reactor.db.host=
+#reactor.db.host=127.0.0.1:3306
 
 #
 # This defines database schema used for case results. The default is reactor.
 #
-#reactor.db.schema=
+#reactor.db.schema=reactor
 
 #
-# This defines user name used to access case results database. The default is th.
+# This defines user name used to access case results database. The default is reactor.
 #
-#reactor.db.user=
+#reactor.db.user=reactor
 
 #
 # This defines user password used to access case results database. The default is p@ssword.
 #
-#reactor.db.pass=
+#reactor.db.pass=p@ssword
 
 #
 # This defines suite full class name. The default is com.tascape.reactor.suite.JUnit4Suite.
 #
-#reactor.case.suite=
+reactor.case.suite=com.tascape.reactor.suite.JUnit4Suite
 
 #
 # This defines which case classes will be included during case search. The default is empty, which means to 
 # include all case classes of running suite.
 #
-#reactor.debug.class.regex=
+reactor.debug.class.regex=
 
 #
 # This defines which case methods will be included during case search. The default is empty, which means to 
 # include all case methods of selected case classes.
 #
-#reactor.debug.method.regex=
+reactor.debug.method.regex=
+
+#reactor.product.under.task
 
 #
 # This defines which case classes will be excuded during case search. The default is empty, which means to 
