--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
             <artifactId>org.jacoco.core</artifactId>
             <version>0.7.7.201606060606</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant</artifactId>
+            <version>1.9.7</version>
+        </dependency>
     </dependencies>
 
     <description>Reactor - Automation Framework</description>
