--- a/src/main/resources/reactor.properties
+++ b/src/main/resources/reactor.properties
@@ -49,9 +49,9 @@ reactor.result.visibility=true
 #reactor.db.type=h2
 
 #
-# This defines database host name/IP and port. The default is 127.0.0.1:3306.
+# This defines database host name/IP and port. The default is 127.0.0.1:33306 (report services are deployed with docker).
 #
-#reactor.db.host=127.0.0.1:3306
+#reactor.db.host=127.0.0.1:33306
 
 #
 # This defines database schema used for case results. The default is reactor.
