--- a/src/main/resources/reactor.properties
+++ b/src/main/resources/reactor.properties
@@ -25,8 +25,8 @@ reactor.exec.thread.count=0
 qa.th.case.load.limit=100
 
 #
-# This defines case log directory. The default is ${user.home}/qa/th/logs.
-reactor.log.path=.
+# This defines case log directory. The default is ${user.home}/.reactor/logs.
+#reactor.log.path=
 
 #
 # This is defines if to shuffle case execution sequence.
@@ -74,13 +74,13 @@ reactor.result.visibility=true
 reactor.case.suite=com.tascape.reactor.suite.JUnit4Suite
 
 #
-# This defines which case classes will be included during case search. The default is empty, which means to 
+# This defines which case classes will be included during case search. The default is empty, which means to
 # include all case classes of running suite.
 #
 reactor.debug.class.regex=
 
 #
-# This defines which case methods will be included during case search. The default is empty, which means to 
+# This defines which case methods will be included during case search. The default is empty, which means to
 # include all case methods of selected case classes.
 #
 reactor.debug.method.regex=
@@ -88,13 +88,13 @@ reactor.debug.method.regex=
 #reactor.product.under.task
 
 #
-# This defines which case classes will be excuded during case search. The default is empty, which means to 
+# This defines which case classes will be excuded during case search. The default is empty, which means to
 # exclude NO case classes of running suite.
 #
 #reactor.debug.class.exclude.regex=
 
 #
-# This defines which case methods will be excluded during case search. The default is empty, which means to 
+# This defines which case methods will be excluded during case search. The default is empty, which means to
 # exclude NO case methods of selected case classes.
 #
 #reactor.debug.method.exclude.regex=
